# pIMZ

./: .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  README.md  README.rst  buildout.cfg  requirements.txt  setup.cfg  setup.py  upload.sh  ys_env2.ipynb
.circleci/: config.yml
cIMZ/: build_steps.sh  segment.cpp
cIMZ/src/: imageregion.h  srm.cpp
docs/: IMZMLprocess.ipynb  conf.py  examples.rst  index.rst  modules.rst  requirements.txt  update_readme_md.sh  usage.rst
examples/: Aorta_Peptides.ipynb  GlobusTest.ipynb  HuBMAP_kidney.ipynb  IMZMLExperimental.ipynb  IMZML_peak_called.ipynb  IMZML_process.ipynb  IMZMLfixspectra.ipynb  IMZMLprocess.ipynb  IMZMLprocess.theo_weights.ipynb  Untitled.ipynb  expl_similarity.ipynb  hypergeom_test.ipynb  marker_genes.tsv  marker_genes_bg.tsv  marker_genes_empire.tsv  nldiffreg.10.8_9_11_12_13_14_15.tsv  nldiffreg.11.8_9_10_12_13_14_15.tsv  nldiffreg.12.8_9_10_11_13_14_15.tsv  nldiffreg.13.8_9_10_11_12_14_15.tsv  nldiffreg.14.8_9_10_11_12_13_15.tsv  nldiffreg.15.8_9_10_11_12_13_14.tsv  nldiffreg.8.9_10_11_12_13_14_15.tsv  nldiffreg.9.8_10_11_12_13_14_15.tsv  protein_weights.theo.tsv  protein_weights.tsv  pseudomonas.ipynb  region1_cluster8.tsv  registration_demo.ipynb  shrunkenCentroidSASA.ipynb  spectra_aorta_align.pdn
examples/.ipynb_checkpoints/: IMZMLprocess-checkpoint.ipynb  Untitled-checkpoint.ipynb  marker_genes-checkpoint.tsv  marker_genes_empire-checkpoint.tsv  nldiffreg.0.8_9_10_11_12_13_14_15-checkpoint.tsv  nldiffreg.11.8_9_10_12_13_14_15-checkpoint.tsv  nldiffreg.13.8_9_10_11_12_14_15-checkpoint.tsv  nldiffreg.15.8_9_10_11_12_13_14-checkpoint.tsv  nldiffreg.8.9_10_11_12_13_14_15-checkpoint.tsv  nldiffreg.9.8_10_11_12_13_14_15-checkpoint.tsv
examples/shibo_lipids_2020/: lipids2020_1.ipynb
pIMZ/: annotations.py  clustering.py  comboanalyser.py  comparative.py  differential.py  enrichment.py  grouped_regions.py  hubmap_downloader.py  imzml.py  plotting.py  regions.py  similarity.py
pIMZ/cIMZ/src/: imageregion.h
scripts/: filter_peptide_table.py  filter_peptide_tree.py  gff3ToPeptides.py  gff3ToProteinsLength.py  trypsin.py
src/cIMZ/: CMakeLists.txt
src/cppSRM/: CMakeLists.txt  segment.cpp
src/cppSRM/src/: srm.cpp  srm.h
src/pIMZ/: README.rst  setup.py
src/pIMZ/cimz/: build_steps
src/pIMZ/cimz/src/: imageregion.cpp
src/pIMZ/pimz/: comparative.py  imzml.py  regions.py
src/pIMZ/tests/: __init__.py  basic_test.py
src/pySRM/: LICENSE.txt  setup.py
src/pySRM/pysrm/: __init__.py  comparative.py  hubmap_downloader.py  imzml.py  parser.py  regions.py  segment.py
src/pySRM/tests/: __init__.py  basic_test.py
tests/: basic_test.py
